--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your App</title>
-    <!-- Ensure there are no script tags for Google Maps API here -->
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Travel Planner App</title>
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=REACT_APP_GOOGLE_PLACES_API_KEY&libraries=places&callback=initMap">
+  </script>
+</head>
+<body>
+  <div id="root"></div>
+</body>
 </html>
